Bug/em 2955 page aligment fix (#282)
fixing misalignments issue when document with different page sizes

--- a/projects/media-viewer/src/assets/sass/toolbar/main.scss
+++ b/projects/media-viewer/src/assets/sass/toolbar/main.scss
@@ -214,3 +214,9 @@ html[dir='rtl'] .verticalToolbarSeparator {
 #printContainer {
   display: none;
 }
+
+.has-redact-bar.has-different-page-size {
+  .rotateCcw, .rotateCw {
+    display: none;
+  }
+}
